--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
 }
 
 main {
-    max-width: 800px;
+/*    max-width: 800px;*/
     margin: 2rem auto;
     padding: 2rem;
     background-color: #fff;
